disable scheduler, seems it has mem leak

--- a/ws-connector/home.html
+++ b/ws-connector/home.html
@@ -30,8 +30,8 @@ window.onload = function () {
 
     if (window["WebSocket"]) {
         var urlString = "ws://" + document.location.host + "/ws?"
-        // urlString += "userID=u" + Date.now()
-        urlString += "userID=uaaa"
+        urlString += "userID=u" + Date.now()
+        // urlString += "userID=uaaa"
         urlString += "&platform=web"
         urlString += "&token=token1111"
 
