--- a/ws-connector/home.html
+++ b/ws-connector/home.html
@@ -29,7 +29,7 @@ window.onload = function () {
     };
 
     if (window["WebSocket"]) {
-        var urlString = "ws://" + document.location.host + "/ws?"
+        var urlString = "wss://" + document.location.host + "/ws?"
         urlString += "userID=u" + Date.now()
         // urlString += "userID=uaaa"
         urlString += "&platform=web"
@@ -37,6 +37,11 @@ window.onload = function () {
 
         // conn = new WebSocket("ws://" + document.location.host + "/ws?abc=123&def=aaa");
         conn = new WebSocket(urlString);
+        conn.onopen = function (evt) {
+            var item = document.createElement("div");
+            item.innerHTML = "<b>Connection opened.</b>";
+            appendLog(item);
+        };
         conn.onclose = function (evt) {
             var item = document.createElement("div");
             item.innerHTML = "<b>Connection closed.</b>";
